# clerk-rs

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.MD  README.md  clerk-rs-summary.md  docs.md  rustfmt.toml
.claude/: .claude.json  settings.local.json
.claude/todos/: b3585098-0928-422b-ba7b-bdad887ea41a-agent-b3585098-0928-422b-ba7b-bdad887ea41a.json
.github/workflows/: publish.yaml  test.yaml
.openapi-generator/: FILES
docs/: ActorToken.md  ActorTokensApi.md  Admin.md  AllowListBlockListApi.md  AllowlistIdentifier.md  BlocklistIdentifier.md  BlocklistIdentifiers.md  ClerkError.md  Client.md  ClientsApi.md  CreateActorTokenRequest.md  CreateDemoInstance200Response.md  CreateEmailRequest.md  CreateInvitationRequest.md  CreateJwtTemplateRequest.md  CreateOrganizationInvitationRequest.md  CreateOrganizationMembershipRequest.md  CreateOrganizationRequest.md  CreateRedirectUrlRequest.md  CreateSignInTokenRequest.md  CreateSmsMessageRequest.md  CreateUserRequest.md  DeletedObject.md  DisableMfa200Response.md  Email.md  EmailAddressVerification.md  EmailAddressesApi.md  EmailSmsTemplatesApi.md  EmailsApi.md  GetOAuthAccessToken200ResponseInner.md  InstanceSettingsApi.md  Invitation.md  InvitationsApi.md  JwksApi.md  JwtTemplate.md  MergeOrganizationMetadataRequest.md  Organization.md  OrganizationInvitations.md  OrganizationInvitationsApi.md  OrganizationMembership.md  (+28 more)
examples/: actix.rs  anthropic_api_key.rs  api.rs  axum.rs  axum_log.rs  error_handling.rs  http.rs  oauth_token_source.rs  organization_settings.rs  rocket.rs  system.rs  tracing_axum.rs  validate_phone.rs
new-sdk/: Cargo.toml  README.md
new-sdk/.openapi-generator/: FILES
new-sdk/docs/: ActorTokensApi.md  AddDomainRequest.md  AllowListBlockListApi.md  BetaFeaturesApi.md  CNameTarget.md  ClerkError.md  ClerkErrors.md  Client.md  ClientsApi.md  CreateAllowlistIdentifierRequest.md  CreateBlocklistIdentifierRequest.md  CreateEmailAddressRequest.md  CreateEmailRequest.md  CreateOAuthApplicationRequest.md  CreateOrganizationInvitationBulkRequestInner.md  CreateOrganizationInvitationRequest.md  CreateOrganizationRequest.md  CreatePhoneNumberRequest.md  CreateSamlConnectionRequest.md  CreateSessionTokenFromTemplate200Response.md  CreateUserRequest.md  Domain.md  Domains.md  DomainsApi.md  EmailAddressesApi.md  EmailSmsTemplatesApi.md  EmailsApi.md  InstanceRestrictions.md  InstanceSettingsApi.md  InvitationsApi.md  JwksApi.md  JwtTemplatesApi.md  MiscellaneousApi.md  OAuthApplication.md  OAuthApplicationWithSecret.md  OAuthApplications.md  OAuthApplicationsApi.md  Organization.md  OrganizationInvitation.md  OrganizationInvitationsApi.md  (+43 more)
new-sdk/src/apis/: actor_tokens_api.rs  allow_list_block_list_api.rs  beta_features_api.rs  clients_api.rs  configuration.rs  emails_api.rs  instance_settings_api.rs  invitations_api.rs  jwt_templates_api.rs  miscellaneous_api.rs  mod.rs  organization_invitations_api.rs  organization_memberships_api.rs  organizations_api.rs  phone_numbers_api.rs  sessions_api.rs  users_api.rs  webhooks_api.rs
openapiDocs/: BetaFeaturesApi.md  EmailAddress.md  IdentificationLink.md  InstanceRestrictions.md  JwtTemplatesApi.md  MiscellaneousApi.md  OrganizationInvitation.md  OrganizationMembershipOrganization.md  OrganizationMemberships.md  OrganizationMembershipsApi.md  OrganizationSettings.md  OrganizationWithLogo.md  Organizations.md  OrganizationsApi.md  SignInToken.md  SignUp.md  UpdateOrganizationMembershipRequest.md  UpdateOrganizationRequest.md  UpdateUserRequest.md  VerifyClientRequest.md  VerifyPassword200Response.md  VerifySessionRequest.md  VerifyTotpRequest.md
src/: clerk.rs  endpoints.rs  error.rs  lib.rs  util.rs
src/apis/: actor_tokens_api.rs  allow_list_block_list_api.rs  beta_features_api.rs  clients_api.rs  configuration.rs  domains_api.rs  email_addresses_api.rs  email_sms_templates_api.rs  emails_api.rs  instance_settings_api.rs  invitations_api.rs  jwks_api.rs  jwt_templates_api.rs  miscellaneous_api.rs  mod.rs  o_auth_applications_api.rs  oauth2.rs  organization_invitations_api.rs  organization_memberships_api.rs  organizations_api.rs  phone_numbers_api.rs  redirect_urls_api.rs  saml_connections_beta_api.rs  sessions_api.rs  sign_in_tokens_api.rs  sign_ups_api.rs  sms_messages_api.rs  users_api.rs  users_middleware.rs  webhooks_api.rs
src/models/: actor_token.rs  add_domain_request.rs  admin.rs  allowlist_identifier.rs  blocklist_identifier.rs  blocklist_identifiers.rs  c_name_target.rs  clerk_error.rs  clerk_errors.rs  client.rs  create_actor_token_request.rs  create_allowlist_identifier_request.rs  create_blocklist_identifier_request.rs  create_demo_instance_200_response.rs  create_email_address_request.rs  create_email_request.rs  create_invitation_request.rs  create_jwt_template_request.rs  create_o_auth_application_request.rs  create_organization_invitation_bulk_request_inner.rs  create_organization_invitation_request.rs  create_organization_membership_request.rs  create_organization_request.rs  create_phone_number_request.rs  create_redirect_url_request.rs  create_saml_connection_request.rs  create_session_token_from_template_200_response.rs  create_sign_in_token_request.rs  create_sms_message_request.rs  create_user_request.rs  deleted_object.rs  disable_mfa_200_response.rs  domain.rs  domains.rs  email.rs  email_address.rs  email_address_verification.rs  get_o_auth_access_token_200_response_inner.rs  identification_link.rs  instance_restrictions.rs  (+69 more)
src/tests/: mod.rs  system_test.rs
src/util/: mod.rs  system.rs
src/validators/: actix.rs  authorizer.rs  axum.rs  input.rs  jwks.rs  mod.rs  oauth.rs  password.rs  password_comedy_demo.rs  (+5 more)
(+1 files in other folders)
