[package]
name = "clerk-rs"
version = "0.4.1"
authors = ["DarrenBaldwin07"]
description = "The official community Rust SDK for the Clerk API"
repository = "https://github.com/DarrenBaldwin07/clerk-rs"
homepage = "https://github.com/DarrenBaldwin07/clerk-rs"
readme = "README.md"
keywords = ["clerk", "auth", "actix", "axum", "rocket"]
license = "MIT"
edition = "2021"

[[example]]
name = "http"
path = "examples/http.rs"

[[example]]
name = "api"
path = "examples/api.rs"

[[example]]
name = "actix"
path = "examples/actix.rs"
required-features = ["actix"]

[[example]]
name = "axum"
path = "examples/axum.rs"
required-features = ["axum"]

[[example]]
name = "rocket"
path = "examples/rocket.rs"
required-features = ["rocket"]

[lib]
doctest = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_derive = "^1.0"
serde_json = "^1.0"
url = "^2.2"
regex = "1.10.6"
jsonwebtoken = "9.3.0"
futures-util = "0.3.28"
actix-rt = { version = "2.10.0", optional = true }
actix-web = { version = "4.9.0", optional = true }
axum = { version = "^0.8", optional = true }
rocket = { version = "0.5.0", optional = true }
axum-extra = { version = "^0.10", features = ["cookie"], optional = true }
tower = { version = "0.5.0", optional = true }
async-trait = "0.1.81"
arc-swap = "1.7.1"
poem = { version = "3", features = ["cookie"], optional = true }
log = "0.4.27"

[dependencies.reqwest]
version = "^0.12"
default-features = false
features = ["json", "multipart"]

[dev-dependencies]
base64 = "0.22.1"
clerk-rs = { path = "../clerk-rs" }
mockito = "1.4.0"
rand = "0.8.5"
rsa = "0.9.6"
tokio = { version = "1.39.3", features = ["full"] }

[features]
default = ["rustls-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]
actix = ["dep:actix-rt", "dep:actix-web"]
axum = ["dep:axum", "dep:axum-extra", "dep:tower"]
rocket = ["dep:rocket"]
poem = ["dep:poem"]
