[package]
name = "openapi"
version = "1"
authors = ["support@clerk.com"]
description = "The Clerk REST Backend API, meant to be accessed by backend servers. Please see https://clerk.com/docs for more information."
license = "MIT"
edition = "2018"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_with = "^2.0"
serde_json = "^1.0"
url = "^2.2"
uuid = { version = "^1.0", features = ["serde", "v4"] }
[dependencies.reqwest]
version = "^0.11"
features = ["json", "multipart"]
